# Amassada

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
canvases/stdlib/: architectural-design.yaml  code-review-council.yaml  code-review.yaml  debate.yaml  design-session.yaml  dream-session.yaml  governance-deliberation.yaml  implement-session.yaml  meditation.yaml  org-session.yaml  planning.yaml  project-intake.yaml
config/: projects.toml
crates/amassada-core/: Cargo.toml
crates/amassada-core/src/: blocks.rs  budget.rs  canvas.rs  canvas_library.rs  context.rs  dispatch.rs  error.rs  farga.rs  fondament.rs  lib.rs  moderator.rs  project_registry.rs  round.rs  session.rs  synthesis.rs  types.rs
crates/amassada-core/src/channels/: consult.rs  main_session.rs  mod.rs  whisper.rs
crates/amassada-core/src/governance/: composition.rs  config.rs  mod.rs  risk.rs  room.rs  state.rs
crates/amassada-core/src/graph/: extractor.rs  mod.rs
crates/amassada-core/src/mission/: engine.rs  envelope.rs  evaluator.rs  meta.rs  mod.rs  session_runner.rs  types.rs
crates/amassada-core/src/transport/: local.rs  mod.rs
crates/amassada-core/tests/: blocks_tests.rs  budget_tests.rs  canvas_tests.rs  channels_tests.rs  context_tests.rs  dispatch_tests.rs  governance_tests.rs  graph_tests.rs  persona_dispatch_tests.rs  project_registry_tests.rs  session_tests.rs  transport_tests.rs  types_tests.rs
crates/amassada-server/: Cargo.toml
crates/amassada-server/src/: api.rs  main.rs  ws.rs
docs/: context-graph-empirical-basis.md
docs/superpowers/plans/: 2026-06-12-amassada-implementation.md  2026-06-17-mission-engine.md  2026-06-18-thinking-budget-dispatch.md  2026-06-27-multi-layer-context-graph.md
docs/superpowers/specs/: 2026-06-12-amassada-design.md  2026-06-17-amassada-mission-design.md  2026-06-27-multi-layer-context-graph.md  2026-07-01-trajectory-conditioned-collapse.md
