[package]
name = "amassada-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
charradissa = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
fondament-core = { path = "../../../Fondament/fondament-core" }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
