[package]
name = "amassada-server"
version = "0.1.0"
edition = "2021"

[dependencies]
amassada-core = { path = "../amassada-core" }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
